# QualCompare

./: .gitignore  LICENSE.txt  README.md  README_dev.md  README_user.md  RELEASE_NOTES.md
PatchifyWrapper/: AssemblyInfo.cpp  PatchifyWrapper.cpp  PatchifyWrapper.h  PatchifyWrapper.vcxproj  PatchifyWrapper.vcxproj.filters
QualCompare/: App.config  CompareMetrics.csproj  CompareMetrics.sln  MainWindow.xaml  MainWindow.xaml.cs  PatchifyParametersDialog.xaml  PatchifyParametersDialog.xaml.cs  Program.cs  QualCompare.csproj  QualCompare.sln  README.md  RenderParametersDialog.xaml  RenderParametersDialog.xaml.cs  RenderQueue.cs  UpgradeLog.htm  gui.cs  packages.config
QualCompare/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
QualCompareCLI/: .gitignore  BlenderRenderService.cs  CONFIG_SCHEMA.md  Logger.cs  PatchifyNative.cs  Program.cs  QualCompareCLI.csproj  README.md  RenderConfig.cs
QualCompareCLI/examples/: qualcompare_cli_Circle0_4v_linux.json  render_fibonacci_12views.json  render_ply_voxel_windows.json
QualCompareCLI/scripts/: fill_render_config_paths.py
docs/: current_architecture.md  datasets_and_protocols.md  graphics_lpips_bridge.md  installer_validation.md  known_issues.md  project_overview.md  release_process.md  rendering_pipeline.md  replication.md  todo.md
installer/: qualcompare.iss
obj2png/: Models_characteristics_and_settings.csv  crop.py  fibonacci_positions.csv  positions.py  render_single.py  render_with_csv_transforms.py  render_yana_param.py
patchify/: CMakeLists.txt  patchify.cpp  patchify.h  patchify.sln  patchify.vcxproj  patchify.vcxproj.filters  patchify_c_api.cpp  patchify_c_api.h  patchify_cli.cpp
sample_data/quick_test/source/Bread/source/: bread_BakedUV.obj.mtl
sample_data/quick_test/source/baluster-vase-one-of-three-in-a-five-piece/source/: balustervase_BakedUV.mtl
